# pimsr-benchmarks

./: README.md  pyproject.toml
config/: frozen_2d.json
data/emtf/: USArray_IDI15_2008.xml  USArray_IDI16_2008.xml  USArray_IDJ15_2008.xml  USArray_IDJ16_2008.xml  USArray_IDK15_2008.xml  USArray_IDK16_2008.xml  USArray_MTG15_2008.xml  USArray_MTG16_2008.xml  USArray_MTG17_2008.xml  USArray_MTG18_2009.xml  USArray_MTG19_2009.xml  USArray_MTH15_2008.xml  USArray_MTH16_2008.xml  USArray_WYH18_2009.xml  USArray_WYH19_2009.xml  USArray_WYI17_2009.xml  USArray_WYI18_2009.xml  USArray_WYI19_2009.xml  USArray_WYJ17_2009.xml  USArray_WYJ18_2009.xml  USArray_WYJ19_2009.xml  USArray_WYK17_2009.xml  USArray_WYK18_2009.xml  USArray_WYK19_2009.xml  USArray_WYYS1_2009.xml  USArray_WYYS2_2009.xml  USArray_WYYS3_2009.xml
results/: COMPARISON.md  REPORT.md  finetuned_real.json  finetuned_synthetic.json  frozen_2d.json  history.json  hybrid_real.json  hybrid_synthetic.json  neural_real.json  neural_synthetic.json  occam_real.json  occam_synthetic.json
results/2d-ft/: conv2d_ft_real.json  conv2d_ft_synthetic.json
results/mpft/: mpft.json
scripts/: export_modem_data.py  export_real_npz.py  fetch_usarray.py  make_report.py  run_2d_bench.py  run_2d_hybrid_bench.py  run_3d_bench.py  run_frozen_2d.py  run_hybrid_bench.py  run_modem2d.py  run_multi_profile.py  run_multiprofile_ft.py  run_neural_bench.py  run_occam2dmt.py  run_uncertainty2d.py  run_unified_leaderboard.py  run_v3_postprocess.sh  run_v4_profiles.py
tests/: test_emtf.py  test_hybrid.py  test_occam1d.py  test_statistics.py
(+62 files in other folders)
