[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pimsr-benchmarks"
version = "0.1.0"
description = "Benchmarks of PIMSR neural inversion vs classical Occam 1D MT inversion on synthetic and real USArray data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "h5py>=3.8",
  "pimsr-forward @ git+https://github.com/TheLitis/pimsr-forward.git",
  "pimsr-inversion @ git+https://github.com/TheLitis/pimsr-inversion.git",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.scripts]
pimsr-bench = "pimsr_benchmarks.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pimsr_benchmarks"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 90
target-version = "py310"
